add fb meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="Fitness, Body Building, Bestrong, Gym, Run, Body, oonly for Woman ">
     <meta name="author" content="Natia Tushishvili">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="natia-tushishvili.github.io/final-project/">
+    <meta property="og:type" content="web-site">
+    <meta property="og:title" content="Fitness only for woman">
+    <meta property="og:description" content="Solutions For Moving Better And Feeling Althier.">
+    <meta property="og:image" content="images/girl-resting-after-exercises-gym_152625-820_auto_x2_auto_x2.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
