--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Fitness, Body Building, Bestrong, Gym, Run, Body, oonly for Woman ">
     <meta name="author" content="Natia Tushishvili">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="natia-tushishvili.github.io/final-project/">
+    <meta property="og:url" content="https://natia-tushishvili.github.io/Final-Project/">
     <meta property="og:type" content="web-site">
     <meta property="og:title" content="Fitness only for woman">
     <meta property="og:description" content="Solutions For Moving Better And Feeling Althier.">
